--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://tech-xposer.github.io/admin_dashboard",
-  "name": "admin_dashboard",
+  "homepage": "https://tech-xposer.github.io/admin-dashboard",
+  " name": "admin_dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
